# optimade-mcp-server

./: .env  .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml
config/: optimade_config.json
src/optimade_mcp_server/: main.py
