[project]
name = "optimade-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "optimade>=1.2.4",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
[tool.mcp.tool]
optimade = "optimade_mcp_server.main:app"
